# BreastCancer_FuzzyInterface

./: README.md  pyproject.toml
fuzzyLib/algebras/: algebra.py  godel_algebra.py  lukasiewicz_algebra.py
fuzzyLib/fuzzySetsFol/: fuzzy_set.py  interval_type2_fuzzy_set.py  type1_fuzzy_set.py  type2_fuzzy_set.py
fuzzyLib/knowledge/: antecedent.py  clause.py  linguistic_variable.py  term.py
fuzzyLib/knowledge/consequents/: consequent.py  mamdani_consequent.py  takagi_sugeno_consequent.py
fuzzyLib/utils/: grouping_functions.py
fuzzyLib/utils/membership_functions/: membership_functions.py
tests/: test_tools.py
tests/algebras_tests/: __init__.py  test_godel_algebra.py
